<resources>
    <string name="app_name">FinalProject2018</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_patients">What type of patient do you want to add?</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>>


    <string name="doc_pat">Doctor’s office</string>
    <string name="den_pat">"Dentist Patients"</string>
    <string name="opt_pat">"Optometrist"</string>
    <string name="title_activity_pif_doc_patientlist">"Doctor"</string>
    <string name="add_patient">"Add new Patient"</string>
    <string name="title_activity_pif_opt_patient_list">"Optometrist"</string>
    <string name="title_activity_pif_den_patientlist">Dental</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_doc_patient_detail">Doc_patient_detail</string>
    <string name="action_settings">Settings</string>


    <string name="patient_name">"Patient name"</string>
    <string name="input_name">"Name"</string>
    <string name="input_address">"Address"</string>
    <string name="input_birthday">"Birthday"</string>
    <string name="input_birthday1">"xxxx/xx/xx"</string>

    <string name="input_phone_number">"Phone number"</string>
    <string name="input_Health_number">"Health Car Number"</string>
    <string name="input_description">"Description"</string>
    <string name="input_previous_surg">"Previous surgies"</string>
    <string name="input_allergies">"Allergies"</string>
    <string name="Submit">"Submit"</string>


    <string name="input_glasses_purchase_Date">"When was this pair of glasses purchased?"</string>
    <string name="glasses_store">"Which store was it purchased from?"</string>

    <string name="input_has_Braces">"Do you have braces?"</string>
    <string name="input_has_H_benefits">"Do you have health benefits?"</string>

    <string name="input_yes">"Yes"</string>
    <string name="input_no">"No"</string>

    <string name="den_yes_healthb">"Yes"</string>
    <string name="den_no_healthb">"No"</string>
    <string name="Update">"Update"</string>
    <string name="delete">"Delete"</string>


    <string name="pat_clear">"Clean"</string>
    <string name="load_internet">"Load from internet"</string>

    <string name="pif_start">"Patient intake"</string>

    <string name="pif_help">"Help"</string>>
    <string name="pif_about">"About"</string>
    <string name="Cancel">"Cancel"</string>

    <string name="stat_patient">"Max, Min and Avg ages"</string>



    <string name="button_quzie">Quize</string>
    <string name="button_xml">From Xml</string>
    <string name="button_state">Statistics</string>
    <string name="total_num">Total number of questions:</string>
    <string name="longest">Longest length of questions:</string>
    <string name="shortest">Shortest length of questions:</string>
    <string name="average">Average length of questions:</string>
    <string name="button_help">Help</string>
    <string name="addMultiQuest">MultiQuest</string>
    <string name="addNumQuest">NumQuest</string>
    <string name="addTFQuest">T/F Quest</string>
    <string name="textQust">Quest:</string>
    <string name="textAns">Answer:</string>
    <string name="input_quest">Input question here</string>
    <string name="input_hite">Input a two digits float</string>
    <string name="input_acc">Input an accuracy digit</string>
    <string name="submit">submit</string>
    <string name="cancel">cancel</string>
    <string name="rbt">true</string>
    <string name="rbf">fault</string>
    <string name="add">Add Quest</string>
    <string name="del">delete</string>
    <string name="update">update</string>
    <string name="set_answer">set anwser</string>
    <string name="textAcc">Accuracy:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="author">Author : Minyi Yang</string>

    <string name="intro">Instructions : </string>
    <string name="ok">ok</string>
    <string name="chose">Chose a type</string>
    <string name="des">
        [1] In the Java programming language, an interface is a reference type, similar to a class,
        [2] that can contain only constants, method signatures, default methods, static methods,
        and nested types. Method bodies exist only for default methods and static methods.
        [3] Interfaces cannot be instantiated—they can only be implemented by classes or extended by other interfaces.
    </string>
    <string name="title_activity_toolbar">Toolbar</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>

</resources>
