<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_name" />

        <EditText
            android:id="@+id/den_pat_name"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:textSize="15dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_address" />

        <EditText
            android:id="@+id/den_pat_address"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:textSize="15dp"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_birthday" />

        <EditText
            android:id="@+id/den_pat_birthday"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:hint="@string/input_birthday1"
            android:textSize="15dp"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_phone_number" />

        <EditText
            android:id="@+id/den_pat_phone_number"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textSize="15dp"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_Health_number" />

        <EditText
            android:id="@+id/den_pat_health_number"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:textSize="15dp"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_description"

            />

        <EditText
            android:id="@+id/den_pat_description"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:textSize="15dp"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_has_Braces" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="22dp">
    <RadioGroup android:id="@+id/brace_stat"
        android:orientation="horizontal">
            <RadioButton
                android:id="@+id/den_yes_braces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_yes" />

            <RadioButton
                android:id="@+id/den_no_braces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_no" /></RadioGroup>
        </GridLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_has_H_benefits" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RadioGroup android:orientation="horizontal"
                        android:id="@+id/hBenStat">
            <RadioButton
                android:id="@+id/den_yes_hbenefit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_yes" />

            <RadioButton
                android:id="@+id/den_no_hbenefit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_no" /></RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/den_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Submit" />
                <Button
                    android:id="@+id/den_pat_clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pat_clear" />
                <Button
                    android:id="@+id/den_frag_goback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Cancel" />
            </LinearLayout>
        </GridLayout>


    </LinearLayout>


</FrameLayout>
