<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.oliver.finalproject2018.update_doc">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_name"
            />

        <EditText
            android:id="@+id/pat_name"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:textSize="15dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_address"

            />

        <EditText
            android:id="@+id/doc_pat_address"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:textSize="15dp"

            />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_birthday" />

        <EditText
            android:id="@+id/doc_pat_birthday"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:hint="@string/input_birthday1"
            android:textSize="15dp"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_phone_number" />

        <EditText
            android:id="@+id/doc_pat_phone_number"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:textSize="15dp"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_Health_number" />

        <EditText
            android:id="@+id/doc_pat_health_number"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:textSize="15dp"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_description" />

        <EditText
            android:id="@+id/doc_pat_description"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_previous_surg" />

        <EditText
            android:id="@+id/doc_pat_previous_surg"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_allergies" />

        <EditText
            android:id="@+id/doc_pat_allergies"
            android:layout_width="300dp"
            android:layout_height="35dp"

            android:textSize="15dp"
            />

        <Button android:id="@+id/doc_submit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/Submit"

            />

    </LinearLayout>

</FrameLayout>
