<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.oliver.finalproject2018.PatientIntakeFormStart">

<include layout="@layout/toolbar"
    android:id="@+id/include" />

    <Button
        android:id="@+id/go_to_Doctor_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/go_to_Opt_list"
        android:layout_below="@+id/textView"
        android:layout_marginTop="38dp"
        android:text="@string/doc_pat" />

    <Button
        android:id="@+id/go_to_Opt_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/go_to_Den_list"
        android:layout_below="@+id/go_to_Doctor_list"
        android:layout_marginTop="51dp"
        android:text="@string/den_pat" />

    <Button
        android:id="@+id/go_to_Den_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/go_to_Opt_list"
        android:layout_marginStart="70dp"
        android:layout_marginTop="37dp"
        android:text="@string/opt_pat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/add_patients"
        android:textSize="20dp" />


</RelativeLayout>
