<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.oliver.finalproject2018.pif_start">

    <android.support.v7.widget.Toolbar
        android:id="@+id/patient_toolbar_start"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/String_ad_patients"
                android:textSize="25dp"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"

                android:text="@string/add_patients"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/doctor_pat_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/String_ad_patients"
                android:layout_below="@+id/String_ad_patients"
                android:layout_marginStart="65dp"
                android:layout_marginTop="70dp"
                android:text="@string/doc_pat" />

            <Button
                android:id="@+id/dental_pat_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/optical_pat_btn"
                android:layout_below="@+id/doctor_pat_btn"
                android:layout_marginTop="32dp"
                android:text="@string/den_pat" />

            <Button
                android:id="@+id/optical_pat_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/doctor_pat_btn"
                android:layout_below="@+id/dental_pat_btn"
                android:layout_marginTop="30dp"
                android:text="@string/opt_pat" />

        </RelativeLayout></ScrollView>

</LinearLayout>